resolved extra space issue

--- a/src/views/CreateNewPassword/CreateNewPassword.module.scss
+++ b/src/views/CreateNewPassword/CreateNewPassword.module.scss
@@ -44,8 +44,14 @@
   padding-bottom: var(--paddingExtraSmall);
 }
 
-.successText{
+.successText {
   color: var(--successText);
+}
+
+@media (max-width: 800px) {
+  .minHeight {
+    min-height: var(--height_50);
+  }
 }
 
 @media (max-width: 511px) {
