--- a/src/views/LoginForm/loginForm.module.scss
+++ b/src/views/LoginForm/loginForm.module.scss
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  gap: var(--gapLarge);
+  gap: var(--gapSmallMedium);
 }
 
 .inputAndBtnContainer {
